--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
@@ -12,14 +12,14 @@
                                 <label>
                                     <input type="checkbox" 
                                            ng-model="datos_view.seleccionarOtros" 
-                                           ng-disabled="datos_view.estadoRegistro == 1"
+                                           ng-disabled="validarCheck()"
                                            ng-change ="cargarEmpresaSession()"><h4>Seleccionar otras salidas</h4>   
                                 </label>
                             </div>
                         </div>
                     </div>                            
                 </div>                                              
-                <div class="col-md-12" style="margin-top: 50px;"><!--ng-switch-when="2"//-->
+                <div class="col-md-12" style="margin-top: 50px;">
                     <div class="row">
 
                         <div class="col-md-4">
@@ -81,16 +81,16 @@
                                 <legend>Numero</legend>
                                 <div class="row">
                                     <div class="col-md-7">
-                                         <div class="input-group">
+                                        <div class="input-group">
                                             <input type="text" 
-                                               ng-disabled="datos_view.estadoRegistro == 1 || despachoId > 0 || documentoDespachoAprobado.cantidadCajas == 0 && documentoDespachoAprobado.cantidadNeveras == 0"  
-                                               class="form-control"  
-                                               ng-model="documentoDespachoAprobado.numero" 
-                                               placeholder="Numero" 
-                                               name="" 
-                                               id="" 
-                                               validacion-numero-entero-coma
-                                               ng-blur="validarExistenciaDocumento()"/>
+                                                   ng-disabled="datos_view.estadoRegistro == 1 || despachoId > 0"
+                                                   class="form-control"  
+                                                   ng-model="documentoDespachoAprobado.numero" 
+                                                   placeholder="Numero" 
+                                                   name="" 
+                                                   id="" 
+                                                   validacion-numero-entero-coma
+                                                   ng-blur="validarExistenciaDocumento()"/> <!--|| documentoDespachoAprobado.cantidadCajas == 0 && documentoDespachoAprobado.cantidadNeveras == 0-->
                                             <span class="input-group-btn">
                                                 <button class="btn btn-default pull-right" 
                                                         title="Multiples EFC" 
@@ -109,7 +109,7 @@
 
                     </div>                              
                 </div>                             
-                <div class="col-md-12" style="margin-top: 50px;"><!--ng-switch-when="2"//-->
+                <div class="col-md-12" style="margin-top: 50px;">
                     <div class="row">                                                                      
                         <div class="col-md-4">
                             <fieldset>
@@ -144,11 +144,11 @@
                                 <div class="row">  
                                     <div class="col-md-12">                                          
                                         <textarea  class="col-lg-12 col-md-12 col-sm-12" 
-                                            ng-disabled="datos_view.estadoRegistro == 1 || despachoId > 0"  
-                                            rows="4" 
-                                            name="" 
-                                            ng-model="documentoDespachoAprobado.observacion" 
-                                            placeholder="Ingresar Observación"></textarea>
+                                                   ng-disabled="datos_view.estadoRegistro == 1 || despachoId > 0"  
+                                                   rows="4" 
+                                                   name="" 
+                                                   ng-model="documentoDespachoAprobado.observacion" 
+                                                   placeholder="Ingresar Observación"></textarea>
                                     </div>
                                 </div>
                             </fieldset>
@@ -156,16 +156,23 @@
 
                     </div>
                     <br>
+                    <br>              
+                    <div ng-switch on="datos_view.seleccionarOtros && despachoId == 0" class="table-responsive">
+                        <button ng-switch-when="true" class="btn btn-default" ng-click="agregarDocumento()" ng-disabled="datos_view.estadoRegistro == 1 || despachoId > 0">
+                            <span class="glyphicon glyphicon-plus" ></span> Adicionar Doc
+                        </button>  
+                        <div ng-switch-when="true" class="" style="height: 400px;" ng-grid="lista_remisiones_bodega"> </div>
+                    </div>
 
                 </div>
-                
+
                 <br>
                 <div class="col-md-3" ng-if="documentoDespachoAprobado.obtenerImagenes().length > 0">
-                   
+
                     <button class="btn btn-sm btn-success" ng-click="onBtnPreview(imagen)"><i class="glyphicon glyphicon-zoom-in"></i> Imagenes adjuntas {{documentoDespachoAprobado.obtenerImagenes().length}}</button>
-                     
+
                 </div>
-                
+
                 <div class="modal-footer col-md-12">                                
 
                     <button class="btn btn-default" ng-click="regresarListaDespachosAprobados()">
@@ -175,7 +182,7 @@
                     <button class="btn btn-default" ng-disabled="despachoId > 0 || datos_view.disabledBtnGuardar == true || datos_view.existenciaDocumento == true" ng-click="aprobarDespacho()">
                         <span class="glyphicon glyphicon-ok" ></span> Guardar  
                     </button>  
-                    
+
                     <span >
                         <label for="files" class="btn btn-default"><i class="glyphicon glyphicon-paperclip"></i> Adjuntar imagen</label>
                         <input type="file" id="files" style="display: none;" accept="image/*"  class="btn btn-default pull-right" ng-disabled="despachoId == 0 || documentoDespachoAprobado.obtenerImagenes().length == 4 || datos_view.estadoRegistro == 1" onchange="angular.element(this).scope().subirArchivo(this.files)"  />
