--- a/public/dusoft_duana/NotasProveedores/views/index.html
+++ b/public/dusoft_duana/NotasProveedores/views/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="panel panel-primary">
-    <div class="panel-heading" style="background: #0f528c;">Buscar Proveedores</div>
+    <div class="panel-heading" >Buscar Proveedores</div> <!-- style="background: #0f528c;" -->
     <div class="panel-body" id="search_provider">
         <div class="col-md-12">
             <div class="col-md-2 col-lg-1">
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div class="col-md-2">
-                <label for="">Nº Documento </label><input type="text" class="form-control" ng-model="numero_documento" placeholder="Nº Documento">
+                <label for="">Nº Documento </label><input type="text" class="form-control" ng-model="numero_documento" autocomplete="" placeholder="Nº Documento">
             </div>
             <div class="col-md-2">
                 <label for="">Nombre</label><input type="text" class="form-control" ng-model="nombre_tercero" placeholder="Nombre Tercero">
