--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarplanillas.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarplanillas.html
@@ -29,16 +29,14 @@
                                 <div class="col-md-6">
                                     <fieldset>
                                         <legend>Tipo Guia</legend>      
-
-                                        <ui-select ng-model="planilla.ciudad" ng-disabled="planilla.get_numero_guia() > 0" theme="select2" class="form-control selectgeneral pull-left" ng-change="seleccionar_ciudad()">
-                                            <ui-select-match  placeholder="Seleccionar ciudad">{{ $select.selected.get_nombre_ciudad()}}</ui-select-match>
-                                            <ui-select-choices refresh="listar_ciudades($select.search)" refresh-delay="0" repeat="ciudad in Empresa.get_ciudades() | filter:$select.search">
-                                                {{ ciudad.get_nombre_ciudad()}}
-                                            </ui-select-choices>
-                                        </ui-select>                                   
+                                        <ul class="dropdown-menu" ng-disabled="planilla.get_numero_guia() > 0">
+                                            <li ng-repeat="prefijo in datos_view.prefijosPlanilla">
+                                                <a  href="javascript:void(0)">{{prefijo.descripcion}}</a>
+                                            </li>
+                                        </ul>
                                     </fieldset>
                                 </div>                        
-                            </div>                        
+                            </div>  
                             <div class="col-md-5">
                                 <div class="col-md-6">
                                     <fieldset>
