--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/salida.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/salida.html
@@ -33,7 +33,8 @@
                                         <div class="form-group">
                                             <label class="control-label" for="surname">Hora</label>
                                             <div class="input-group clockpicker">
-                                                    <input type="time" id="exampleInput" name="input" ng-model="horaDespacho.value" placeholder="HH:mm:ss" required />
+                                                    <!--<input type="time" id="exampleInput" name="input" ng-model="horaDespacho.value" placeholder="HH:mm:ss" required />-->
+                                                     <input id="appt-time" type="time" name="appt-time"  ng-model="horaDespacho.value" required/>
                                             </div>
                                         </div>
                                     </div>
@@ -43,7 +44,7 @@
                                 <div class="form-group">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                         <label class="control-label" for="surname">Ciudad</label>
-                                        <ui-select ng-model="root.ciudad"  theme="select2" class="form-control selectgeneral pull-left"  >
+                                        <ui-select ng-model="root.ciudad"  theme="select2" class="form-control selectgeneral pull-left" ng-change="seleccionar_ciudad()"   >
                                             <ui-select-match  placeholder="Seleccionar Ciudades">{{ $select.selected.nombre_ciudad}}</ui-select-match>
                                             <ui-select-choices refresh-delay="0" repeat="operario in root.ciudades | filter:$select.search">                                            
                                                 {{ operario.nombre_ciudad}}                                            
@@ -104,9 +105,9 @@
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                         <label class="control-label" for="surname">Cliente</label>
                                         <ui-select ng-model="root.cliente"  theme="select2" class="form-control selectgeneral pull-left" ng-change="seleccionar_cliente()">
-                                            <ui-select-match  placeholder="Seleccionar cliente">{{ $select.selected.nombre_tercero}}</ui-select-match>
+                                            <ui-select-match  placeholder="Seleccionar cliente">{{ $select.selected.nombre_tercero}} - {{ $select.selected.tipo_id_tercero}} {{ $select.selected.tercero_id}}</ui-select-match>
                                             <ui-select-choices refresh="listar_clientes($select.search)" refresh-delay="0" repeat="cliente in root.clientes | filter:$select.search">                                            
-                                                {{ cliente.nombre_tercero}}                                            
+                                                {{ cliente.nombre_tercero}} - {{cliente.tipo_id_tercero}}  {{cliente.tercero_id}}                                          
                                             </ui-select-choices>
                                         </ui-select> 
                                     </div>
